# pl8catch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.yaml  index.yaml  justfile  pyproject.toml
.github/workflows/: checks.yaml  docker-publish.yaml  release-charts.yaml
charts/: Chart.yaml  values.yaml
charts/pl8catch/: Chart.yaml  values.yaml
charts/pl8catch/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
configs/: backend.docker.yaml  backend.yaml  train.yaml
docker/: pl8catch.Dockerfile
notebooks/: train_license_plate_yolo.ipynb
src/frontend/: app.py
src/pl8catch/: app.py  data_model.py  environment.py  lifespan.py  log.py  utils.py
src/pl8catch/api/: __init__.py  health.py  inference.py  system.py
src/pl8catch/config/: __init__.py  app_config.py  env.py
src/pl8catch/core/: domain_models.py  ml_models.py  model.py  utils.py
src/pl8catch/logging/: __init__.py  setup.py
src/training/: config.py  train.py
test/: conftest.py
test/unit/pl8catch/: data_model_test.py
tests/: conftest.py  pytest.ini
tests/unit/: api_test.py  config_test.py  core_domain_models_test.py  core_ml_models_test.py  core_model_test.py  core_utils_test.py
tests/unit/pl8catch/: data_model_test.py  utils_test.py
