[project]
name = "pl8catch"
version = "0.1.0"
description = "Solution to automatically recognize license plates."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Daniel Sousa" }]
packages = [{ include = "pl8catch", from = "src" }, { include = "training", from = "src" }]
dependencies = [
	"fastapi>=0.111,<0.112",
	"loguru>=0.7.3",
	"opencv-python>=4.9.0.80,<5",
	"pydantic-settings>=2.11.0",
	"pytesseract>=0.3.10,<0.4",
	"pyyaml>=6.0.1,<7",
	"streamlit>=1.34,<2",
	"ultralytics>=8.2.13,<9",
]

[project.urls]
"Source" = "https://github.com/dhcsousa/pl8catch"


[dependency-groups]
dev = [
	"black>=24.2,<25",
	"mlflow>=3.4.0",
	"mypy>=1.5.1,<2",
	"pre-commit>=3.4,<4",
	"pytest>=7.4.2,<8",
	"roboflow>=1.2.9",
	"ruff>=0.3.0,<0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
