[project]
name = "pl8catch"
version = "0.3.5"
description = "Solution to automatically recognize license plates."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Daniel Sousa" }]
urls = { "source" = "https://github.com/dhcsousa/pl8catch" }
dependencies = [
	"fastapi>=0.111",
	"lap>=0.5.12",
	"loguru>=0.7.3",
	"opencv-python>=4.9.0.80",
	"pydantic-settings>=2.11.0",
	"pytesseract>=0.3.10",
	"pyyaml>=6.0.1",
	"requests>=2.32.5",
	"ultralytics>=8.2.13",
	"uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
	"black>=24.2",
	"mlflow>=3.4.0",
	"mypy>=1.5.1",
	"pre-commit>=3.4",
	"pytest>=7.4.2",
	"roboflow>=1.2.9",
	"ruff>=0.3.0",
]
frontend = [
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pl8catch", "src/training"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
